# ArchAngel---An-AI-driven-CLI-Assistant-for-arch-based-sytems

./: .gitignore  README.md
ai-core/app/: main.py
archangel/: pyproject.toml
archangel-orchestrator/: pom.xml
archangel-orchestrator/data/: archangel.mv.db
archangel-orchestrator/logs/: archangel.log.1  archangel.log.2  archangel.log.3
archangel-orchestrator/src/main/java/org/archangel/api/: AnalysisResource.java  IncidentResource.java  NewsResource.java  SystemResource.java  SystemStatusResource.java
archangel-orchestrator/src/main/java/org/archangel/automate/: CommandRateLimit.java  CompleteCycle.java  CycleScheduler.java  MonitoringSchedular.java  OrchestratorService.java
archangel-orchestrator/src/main/java/org/archangel/entity/: Incident.java  Incident_Repo.java
archangel-orchestrator/src/main/java/org/archangel/model/: CommandResponse.java  NewsItem.java  SystemStatus.java
archangel-orchestrator/src/main/java/org/archangel/rss/: ArchNewsFetcher.java
archangel-orchestrator/src/main/java/org/archangel/scheduler/: NewsScheduler.java
archangel-orchestrator/src/main/java/org/archangel/state/: NewsCacheService.java
archangel-orchestrator/src/main/java/org/archangel/system/: AllowedCommands.java  (+5 more)
archangel-orchestrator/src/main/resources/: application.properties
archangel/brain/: main.py
archangel/src/: __init__.py
archangel/src/archangel/: __init__.py  cli.py
archangel/src/archangel_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/archangel/: cli.py
src/archangel_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+6 files in other folders)
