[project]
name = "archangel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dev", email = "Dev.Sterling@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
archangel = "archangel:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
